# PMQL_BaiXe

./: .env.example  .gitignore  README.md  add_hardware_page.py  add_settings_page.py  add_tcp_integration.py  create_settings_db.py  fee_page_patch.py  fee_page_patch2.py  fee_page_patch3.py  fee_ui_fix.py  fix.py  fix_all_issues.py  fix_session_border.py  fix_vehicle_repo.py  pyproject.toml  session_page_patch.py
.agents/: AGENTS.md
.agents/maps/: architecture.md  feature_accounts.md  feature_cards.md  feature_fees.md  feature_lanes.md  feature_operations.md  feature_overview.md  feature_shifts.md  feature_subscribers.md  guide_new_entity.md
src/pmql/: __init__.py  main.py
src/pmql/application/: __init__.py  security.py
src/pmql/application/ports/: authorization_port.py  hardware_ports.py  notification_port.py  repositories.py  security_port.py  sync_port.py
src/pmql/application/use_cases/: management_ops.py
src/pmql/application/use_cases/alert_ops/: __init__.py  acknowledge_alert_use_case.py
src/pmql/application/use_cases/auth/: __init__.py  create_user_use_case.py  get_current_user_use_case.py  login_use_case.py
src/pmql/application/use_cases/lane_ops/: __init__.py  vehicle_entry_use_case.py  vehicle_exit_use_case.py
src/pmql/application/use_cases/shift_ops/: __init__.py  close_shift_use_case.py  open_shift_use_case.py
src/pmql/application/use_cases/subscriber_ops/: __init__.py  register_subscriber_use_case.py
src/pmql/config/: __init__.py  settings.py
src/pmql/domain/: __init__.py  exceptions.py
src/pmql/domain/entities/: __init__.py  alert.py  card.py  device.py  fee_rule.py  lane.py  session.py  shift.py  subscriber.py  user.py  vehicle.py
src/pmql/domain/services/: __init__.py  fee_calculator.py
src/pmql/domain/value_objects/: __init__.py  money.py  plate_number.py  time_range.py
src/pmql/infrastructure/: __init__.py
src/pmql/infrastructure/hardware/: __init__.py  mock_hardware.py  rfid_tcp.py
src/pmql/infrastructure/persistence/sqlite/: __init__.py  authorization_repository.py  database.py  models.py  repositories.py  vehicle_type_repository.py
src/pmql/infrastructure/security/: __init__.py  jwt_token_service.py  password_hasher.py
src/pmql/infrastructure/sync/: __init__.py  outbox_writer.py
src/pmql/ui/: __init__.py  app.py  components.py  db_helpers.py  login.py  main_window.py
src/pmql/ui/pages/: __init__.py  alert_page.py  card_page.py  dashboard_page.py  device_page.py  fee_page.py  lane_page.py  operations_page.py  session_page.py  settings_page.py  shift_page.py  subscriber_page.py  user_page.py  vehicle_type_page.py
tests/: test_auth_and_authorization.py  test_fee_calculator.py  test_lane_ops.py  test_new_repo_and_cli_additions.py  test_shift_and_auth.py
