[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmql-baixe"
version = "0.1.0"
description = "Hybrid SQLite + MySQL Parking Management System (local-first)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Team", email = "dev@yourcompany.com" }]

dependencies = [
    # Core async DB
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "asyncmy>=0.2",
    "alembic>=1.13",

    # Schema / Validation / Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # DI
    "dependency-injector>=4.41",

    # Scheduling & sync
    "apscheduler>=3.10",

    # Logging
    "structlog>=24.1",

    # UI
    "PySide6>=6.7",
    # NOTE: PySide6-Fluent-Widgets installed separately if needed

    # Hardware / AI (optional at runtime)
    "opencv-python>=4.9",
    "pyserial>=3.5",
    "pymodbus>=3.6",
]

[project.scripts]
pmql = "pmql.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "mypy>=1.10",
    "import-linter>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

# ─── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "C90",              # McCabe complexity
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "RET",              # flake8-return
    "TID",              # flake8-tidy-imports
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]

# ─── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

# ─── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# ─── import-linter ──────────────────────────────────────────────────────────
[tool.importlinter]
root_package = "pmql"
include_external_packages = true
