[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmql-baixe"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
gui = ["PySide6>=6.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
